# bodyapp

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  sql_app.db
backend/backend/: crud.py  database.py  main.py  models.py  schemas.py
backend/tests/http/: test.http
bodyapp/: README.md  pubspec.yaml
bodyapp/android/app/: build.gradle
bodyapp/android/app/src/main/: AndroidManifest.xml
bodyapp/android/app/src/main/kotlin/com/example/bodyapp/: MainActivity.kt
bodyapp/android/app/src/profile/: AndroidManifest.xml
bodyapp/ios/Runner/: Info.plist
bodyapp/ios/Runner.xcodeproj/: project.pbxproj
bodyapp/lib/: main.dart
bodyapp/lib/dieta/ui/screens/: dieta_screen.dart  mais_dietas_screen.dart  screens.dart
bodyapp/lib/home/screens/: home_screen.dart
bodyapp/lib/login/ui/screens/: login_screen.dart
bodyapp/lib/medidas/ui/screens/: medidas_screen.dart  screens.dart
bodyapp/lib/objetivos/ui/screens/: objetivos_screen.dart  screens.dart  teste.dart  visualizar_melhor_screen.dart
bodyapp/lib/progressao/ui/screens/: progressao_screen.dart  screens.dart
bodyapp/lib/register/ui/screens/: register_screen.dart
bodyapp/lib/shared/: colors.dart  text_theme.dart
bodyapp/lib/shared/widgets/: measure_card.dart  select_widget.dart  widgets.dart
bodyapp/test/: widget_test.dart
bodyapp/web/: index.html  manifest.json
docs/features/: medidas.feature
