[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mario H. Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
requests = "^2.26.0"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
fastapi-mail = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
